--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@mauriora/announcements-lists-deployment",
   "description": "Deploys the acknowledged announcements list, the extended announcements content type and list.",
-  "version": "0.0.11",
+  "version": "0.0.12",
+  "license": "MIT",
   "private": true,
   "main": "lib/index.js",
   "author": {
@@ -17,6 +18,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@mauriora/model-announcement-extended": "0.0.3",
     "@mauriora/spfx-packaging": "0.0.5",
     "@microsoft/sp-build-web": "1.12.1",
     "gulp": "^4.0.2"
